1.5/_sources/modules/generated/sklearn.decomposition.MiniBatchSparsePCA.rst.txt
MiniBatchSparsePCA
==================

.. currentmodule:: sklearn.decomposition

.. autoclass:: MiniBatchSparsePCA
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.decomposition.MiniBatchSparsePCA sklearn.decomposition.MiniBatchSparsePCA.__init__ sklearn.decomposition.MiniBatchSparsePCA.fit sklearn.decomposition.MiniBatchSparsePCA.fit_transform sklearn.decomposition.MiniBatchSparsePCA.get_feature_names_out sklearn.decomposition.MiniBatchSparsePCA.get_metadata_routing sklearn.decomposition.MiniBatchSparsePCA.get_params sklearn.decomposition.MiniBatchSparsePCA.inverse_transform sklearn.decomposition.MiniBatchSparsePCA.set_output sklearn.decomposition.MiniBatchSparsePCA.set_params sklearn.decomposition.MiniBatchSparsePCA.transform 
   :add-heading: Gallery examples
   :heading-level: -